--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
+    "build": "electron-builder",
+    "dist": "electron-builder --win --x64",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
