--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "devDependencies": {
     "electron": "^35.1.4",
     "electron-builder": "^26.0.12"
+  },
+  "dependencies": {
+    "serialport": "^13.0.0"
   }
 }
